# excel_tables

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py  update_pypi.sh
excel_tables/: __init__.py  excel_util.py
test/: mountains.xlsx  mountains_old.xlsx  output.xlsx  output_mult.xlsx  test.py  test_main.py  test_xl.py
