[project]
name = "excel_tables"
version = "0.5.2"
description = "Python library to quickly export pandas tables to pretty, sensible Excel workbooks."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Fralau", email = "fralau@bluewin.ch" }
]
dependencies = [
    "pandas",
    "openpyxl",
    # presentation:
    "rich",
    "babel",
    "webcolors"
]
urls = { "Homepage" = "https://github.com/fralau/excel_tables" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
